yamls file/yaml file of springboot application (testhello)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testhello-service
  namespace: hello
spec:
  selector:
    app: testhello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8030
  type: NodePort
