yamls file/yaml file of springboot application (testhello)/testhello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testhello-ingress
  namespace: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: testhello.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testhello-service
            port:
              number: 8080
  tls:
  - hosts:
    - testhello.example.com
    secretName: testhello-tls
